--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "oauth": "^0.10.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
